fix header on mobile

--- a/src/components/Logo/Logo.module.sass
+++ b/src/components/Logo/Logo.module.sass
@@ -7,3 +7,7 @@
   .pokeball
     height: 30px
     margin-right: 5px
+
+@media screen and (max-width: 450px)
+  .logo
+    font-size: 20px!important
