--- a/src/components/Pagination/Pagination.module.sass
+++ b/src/components/Pagination/Pagination.module.sass
@@ -1,3 +1,7 @@
+.container
+  display: flex
+  flex-direction: row
+
 .button
   font-size: 30px
   margin-left: 15px
@@ -7,3 +11,9 @@
     opacity: .6
   &:active
     transform: scale(.9)
+
+
+@media screen and (max-width: 450px)
+  .button
+    font-size: 25px
+    margin-left: 5px
