--- a/src/components/Seacrh/Search.module.sass
+++ b/src/components/Seacrh/Search.module.sass
@@ -7,3 +7,8 @@
 
   &:hover
     box-shadow: 0 0 4px rgba(0,0,0,.7)
+
+@media screen and (max-width: 450px)
+  .input
+    width: 100px
+
